--- a/app/src/main/res/layout/activity_prestamo.xml
+++ b/app/src/main/res/layout/activity_prestamo.xml
@@ -209,6 +209,7 @@
         android:layout_height="41dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:onClick="onClick"
         android:text="Siguiente"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
