--- a/app/src/main/res/layout/activity_main2_registro.xml
+++ b/app/src/main/res/layout/activity_main2_registro.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="Monto Credito"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spcliente" />
@@ -49,29 +49,26 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="8dp"
         android:text="Interes"
         app:layout_constraintStart_toEndOf="@+id/textView12"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        app:layout_constraintTop_toBottomOf="@+id/spcliente" />
 
     <TextView
         android:id="@+id/textView14"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="Plazo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.725"
-        app:layout_constraintStart_toEndOf="@+id/textView13"
         app:layout_constraintTop_toBottomOf="@+id/spcliente" />
 
     <EditText
         android:id="@+id/monto"
         android:layout_width="121dp"
-        android:layout_height="35dp"
+        android:layout_height="39dp"
         android:layout_marginStart="16dp"
         android:ems="10"
         android:inputType="numberDecimal"
@@ -81,7 +78,7 @@
     <EditText
         android:id="@+id/plazo"
         android:layout_width="125dp"
-        android:layout_height="35dp"
+        android:layout_height="42dp"
         android:layout_marginEnd="4dp"
         android:ems="10"
         android:inputType="number"
@@ -226,13 +223,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20"
-        app:layout_constraintVertical_bias="0.307" />
+        app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
     <Button
         android:id="@+id/btncancelar"
